Fix ws on mobile chrome

--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -15,3 +15,14 @@
 canvas {
   display: block; /* fix necessary to remove space at bottom of canvas */
 }
+
+/* Optional: Additional styling to better match dat.GUI */
+.dat-link {
+  color: #fff;
+  text-decoration: none;
+  font-size: 12px;
+}
+
+.dat-link:hover {
+    color: #ff8c00;
+}
